* Changelog

** Unreleased
Targets *Emacs 30*.

*** Added
- Package =vterm=: for better experience over Emacs native terminals.
- Enable =which-key-mode= with some customazations.
- Display examples of functions with =shortdoc-help-fns-examples-function=.
- =Dockerfile= recipe for ~treesit-install-language-grammar~.
- Package =auto-dark= and local configuration =yet-auto-dark-themes=.

*** Changed
- Keybinding =C-c t s= now starts =vterm= instead of =ansi-term=.

*** Removed
- Workarounds related to native Emacs shell and term modes.
- Disable =pulse= highlight color change: =pulse-flag= is =nil= now.

** v2.3.0 2025-06-12

Introduces *Emacs 29* features support.

Includes numerous usability adjustments.
Adds package =gptel= -- a LLM chat client.

*** Added
- Global keybinding =C-c f r= to call ~rename-visited-file~ (Emacs 29.1).
- Enable =pixel-scroll-precision-mode= (since Emacs 29.1).
- Global keybinding =C-c e r= to call ~restart-emacs~ (Emacs 29.1).
- Global keybinding =C-c e q= to call ~yet-kill-emacs-reset-desktop~.
- Advice ~yet-org-export-to-tmp-dir~ uses temporary directory by default.
- Enable =web-mode-enable-current-column-highlight= to highlight matching pair
  of tags.
- New optional constant ~yet-org-noob~.
- =org-mode-map= keybinding =C-c o l= to call =org-store-link=.
- Function ~yet-org-unfill~ to unfill elements, bound to =C-M-q=.
- Function ~yet-org-export-output-file-name-toggle~ (=C-c o e= in =org-mode=).
- Enable =undelete-frame-mode= that provides function ~undelete-frame~.
- Enable =winner-mode= that records changes in window configuration.
- Package =gptel=: a Large Language Model (e.g., ChatGPT) chat client.
- Function ~yet-toggle-window-split~, globally bound to =C-c b s=.
- In =org-mode= buffers, open a link by hitting =RET=.
- Package =org-contrib=: enable add-on =ox-extra= to ignore headlines.
- Function ~yet-vc-print-root-log-latest~ bound to =C-c v L= in =vc-dir-mode=.