@@ -6,7 +6,7 @@
  '(package-selected-packages
    '(auto-dark company debbugs diff-hl eglot exec-path-from-shell fish-mode gptel
                htmlize imenu-list markdown-mode org-contrib pdf-tools php-mode
-               racket-mode rainbow-mode rust-mode vterm web-mode)))
+               racket-mode rainbow-mode rust-mode transient vterm web-mode)))
 (custom-set-faces
  ;; custom-set-faces was added by Custom.
  ;; If you edit it by hand, you could mess it up, so be careful.
